fix overflow

--- a/public/nav.css
+++ b/public/nav.css
@@ -11,6 +11,7 @@ nav{
     white-space:nowrap;
     color:white;
     font-family: 'Montserrat', sans-serif;
+    overflow-x:hidden;
 }
 .dropbtn{
     border-style:none; 
